@@ -1,4 +1,5 @@
-/* Copyright (C) 2008 Free Software Foundation, Inc.
+/* pthread_spin_trylock -- trylock a spin lock.  Generic version.
+   Copyright (C) 2012 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -12,7 +13,7 @@
    Lesser General Public License for more details.
 
    You should have received a copy of the GNU Lesser General Public
-   License along with the GNU C Library.  If not, see
+   License along with the GNU C Library; if not, see
    <http://www.gnu.org/licenses/>.  */
 
 #include <errno.h>
@@ -22,5 +23,5 @@
 int
 pthread_spin_trylock (pthread_spinlock_t *lock)
 {
-  return atomic_compare_and_exchange_val_acq (lock, 1, 0) ? EBUSY : 0;
+  return atomic_exchange_acq (lock, 1) ? EBUSY : 0;
 }
