@@ -1,3 +1,8 @@
+2012-08-15  Maxim Kuvyrkov  <maxim@codesourcery.com>
+
+	* sysdeps/arm/nptl/pthread_spin_lock.c: Use generic code.
+	* sysdeps/arm/nptl/pthread_spin_trylock.c: Remove, use generic version.
+
 2012-08-14  Roland McGrath  <roland@hack.frob.com>
 
 	* sysdeps/unix/sysv/linux/arm/nptl/bits/atomic.h: Renamed to ...
